<resources>
    <string name="app_name">SUPER</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sourabh Kothur</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="show_password">Show Password</string>
    <string name="todo">TODO</string>
    <string name="welcome">Welcome to Nestle Coffee Portal! Prepare your taste buds to experience the delicious flavours.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="validate_otp">Validate OTP</string>
    <string name="nav_home">Home</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="nav_profile">Profile</string>
    <string name="profile_info">Profile Update</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Id</string>
    <string name="address">Street Address</string>
    <string name="other">Other</string>
    <string name="nav_rewards">Rewards</string>
    <string name="nav_stores">Near by stores</string>
    <string name="nav_social">Social</string>
    <string name="rewards">Rewards</string>
    <string name="reward_points">Reward points</string>
    <string name="flavors">Flavors</string>
    <string name="up_sale">Promotional Offers</string>
    <string name="grab_a_crossiant_for_1_dollar">Grab a Crossiant for $1!</string>
    <string name="limited_time_only">Limited time only!!</string>
    <string name="get_discount_for_gas">Get Discount for gas.</string>
    <string name="save_0_5_euro_lt">Save &#8364; 0.5/lt</string>
    <string name="refer_and_earn">Refer and earn</string>
    <string name="get_a_chance_to_win">Get a chance to win</string>
    <string name="movie_tickets">Movie Tickets</string>
    <string name="more_offers_in_store">More offers in store</string>
    <string name="skip">Skip</string>
    <string name="proceed">Proceed</string>
    <string name="payment">Payment</string>
    <string name="master_card">Credit Card</string>
    <string name="google_pay">Google Pay</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="card_details">Card Details</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="holder_name">Card holder name</string>
    <string name="card_number">Card number</string>
    <string name="total_amount">Total Amount</string>
    <string name="_5">&#8364; 5</string>
    <string name="please_select_a_cup_size">Please select a cup size</string>
    <string name="small_1">Small (&#8364; 1)</string>
    <string name="medium_2">Medium (&#8364; 2)</string>
    <string name="large_3">Large (&#8364; 3)</string>
    <string name="select">Select</string>
    <string name="view_all_your_nestle_reward_points_here">View all your Nestle REWARD POINTS here</string>
    <string name="promo">Promo Code</string>
    <string name="refer_and_earn_points">refer and earn points</string>
    <string name="apply">apply</string>
    <string name="share_your_promo_code_to_earn_points">Share your promo code to earn points</string>
    <string name="check_your_in_store_points_here">Check your in store points here</string>
    <string name="check_your_fuel_points_here">Check your fuel points here</string>
    <string name="check_more_about_loyalty_rewards_at_https_www_nestle_com">Check more about Loyalty Rewards at https://www.nestle.com</string>
    <string name="dispense_hint">Please place your cup and press the start button below to dispense coffee</string>
    <string name="start_to_dispense">Start to dispense</string>
    <string name="nestle_social">Nestle Social Connect</string>
    <string name="post_something">Post Something..</string>
    <string name="upload">upload</string>
    <string name="post">Post</string>
    <string name="user1">Erik Sanchez</string>
    <string name="postsmtg">Post Something...</string>
    <string name="userContent1">Good day folks! Had an amazing Nescafe near Camp Nuo. I know Nescafe always is the best coffee ever!</string>
    <string name="google_maps_key">AIzaSyCeXXrAzu_U_ECVDExmbqfqVleW7Op_14g</string>
    <string name="comment">comments</string>
    <string name="share">Share</string>
    <string name="user2">Phillipe Torres </string>
    <string name="likes1">20 Likes</string>
    <string name="likes2">79 Likes</string>
    <string name="likes3">108 Likes</string>
    <string name="userContent2">What a day! I was exhausted, saw a Nestle Store near La Rambla and quickly got in to grab my favourite Kitkat Ice-Cream. I\'m relieved now.</string>
    <string name="userContent3">I filled my gas at BP Sant Antoni and got a 10% discount from Nestle as I bought a delicious coffee in store. Thank you Nestle! :)</string>
    <string name="user3">Marta Diaz</string>
    <string name="tvPromo">Promotional Offers</string>
    <string name="addSnack">Want to add a snack on the go with your coffee? Grab a Croissant just for $1! Only for today! </string>
    <string name="increase_rewards">  Increase your Reward Points by sharing this app to your near and dear.</string>
    <string name="shareRewards">Share</string>
    <string name="discount">Get 10% discount on Fuel and In Store. Limited time only! **New Customers only!</string>
    <string name="messi">Earn 20,000 Reward Points and get a chance to win FC Barcelona Official Football Shirt!! G.O.A.T.</string>
    <string name="btnskip">Skip</string>
    <string name="btnadd">Add</string>
    <string name="total">Check all available points here</string>
    <string name="coffee_dispense">Coffee Dispense</string>
    <string name="near_by">Nearby Stores</string>
    <string name="signup">Signup</string>
    <string name="start_your_coffee">start your coffee</string>
    <string name="comments_5">5 Comments</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="post_code">Post Code</string>
    <string name="landmark">Landmark</string>
    <string name="profile">PROFILE</string>
    <string name="spinner_title">Milk</string>
    <string name="milk_type">Select Milk Type:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="unit_flat_number">Unit/Flat Number</string>
    <string name="street_name">Street Name</string>
    <string name="suburb">Suburb</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="update">update</string>
</resources>