<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_icon"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_rewards"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_rewards" />

        <item
            android:id="@+id/nav_stores"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_stores" />

        <item
            android:id="@+id/nav_social"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_social" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_media_next"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>