<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="220dp"
    android:layout_marginStart="100dp"
    android:background="#3E80B4"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/please_select_a_cup_size"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/rdGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/btnSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small_1"
                android:layout_marginEnd="100dp"
                android:padding="10dp"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/btnMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:padding="10dp"
                android:text="@string/medium_2"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/btnLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:text="@string/large_3"
                android:padding="10dp"
                android:checked="true"/>
        </RadioGroup>

    <Button
        android:id="@+id/getBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>