<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FEFBDE"
    tools:context=".ui.components.rewards.RewardsActivity">

    <TextView
        android:id="@+id/tvRefer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all_your_nestle_reward_points_here"
        android:layout_marginStart="50sp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_margin="20dp"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="55dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPromo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/promo"
            android:layout_marginHorizontal="0dp"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="120dp"
        android:text="@string/apply"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refer_and_earn_points"
        android:textColor="@color/black"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="180dp"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/black"
        android:hint="@string/share_your_promo_code_to_earn_points"
        android:layout_marginVertical="200sp"/>

    <ImageButton
        android:id="@+id/ibGas"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="260dp"
        android:src="@drawable/ic_gasstation"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_toEndOf="@+id/ibGas"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="@color/black"
        android:layout_marginTop="260dp"
        android:text="@string/check_your_fuel_points_here"/>

    <ImageButton
        android:id="@+id/ibInStore"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="350dp"
        android:src="@drawable/ic_instore"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/ibInStore"
        android:textColor="@color/black"
        android:backgroundTint="@color/black"
        android:text="@string/check_your_in_store_points_here"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="350dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/check_more_about_loyalty_rewards_at_https_www_nestle_com"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="450dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

</RelativeLayout>